Fix button animations so they're visible above other buttons

--- a/style.css
+++ b/style.css
@@ -25,10 +25,17 @@ body {
   position: relative;
 }
 
-.wide {
+.square {
   position: absolute;
   left: 0px;
   width: 50px;
+  height: 50px;
+}
+
+.rectangle {
+  position: absolute;
+  left: 0px;
+  width: 100px;
   height: 50px;
 }
 
@@ -41,7 +48,6 @@ body {
 }
 
 .active {
-  z-index: 1;
   transform: scale(1.1);
   border: 2px solid black;
 }
